syntax = "proto3";

package words.v1;

option go_package = "proxima-vocabulary/app/word/api/words/v1";

import "pbentity/words.proto";

service Words {
    rpc Create(CreateReq) returns (CreateRes) {}
    rpc Get(GetReq) returns (GetRes) {}
}

message CreateReq {
    uint32 uid = 1;
    string word = 2;
    string definition = 3;
    string example_sentence = 4;
    string chinese_translation = 5;
    string pronunciation = 6;
}

message CreateRes {
    uint32 id = 1;
}

message GetReq {
    uint32 id = 1;
}

message GetRes {
    pbentity.Words word = 1;
}


